<!--  
 /*******************************Copyright Block*********************************
 *                                                                             *
 *                Sally Prayer Times Calculator (Final 24.1.20)                *
 *           Copyright (C) 2015 http://www.sallyprayertimes.com/               *
 *                         bibali1980@gmail.com                                *
 *                                                                             *
 *     This program is free software: you can redistribute it and/or modify    *
 *     it under the terms of the GNU General Public License as published by    *
 *      the Free Software Foundation, either version 3 of the License, or      *
 *                      (at your option) any later version.                    *
 *                                                                             *
 *       This program is distributed in the hope that it will be useful,       *
 *        but WITHOUT ANY WARRANTY; without even the implied warranty of       *
 *        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the        *
 *                 GNU General Public License for more details.                *
 *                                                                             *
 *      You should have received a copy of the GNU General Public License      *
 *      along with this program.  If not, see http://www.gnu.org/licenses      *
 *******************************************************************************/
 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10.0sp"
    tools:context="activities.Info_Activity" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/tab_menu_active"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/app_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_info"
                android:textColor="#ffffffff"
                android:textSize="18.0sp" />
            
            <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/separator"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />
            
            <TextView
                android:id="@+id/app_version"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:textColor="#ffffffff"
                android:textSize="18.0sp" />
            
            <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/separator"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />
            
            <TextView
                android:id="@+id/app_contact"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_contact"
                android:textColor="#ffffffff"
                android:textSize="18.0sp" />
            
            <TextView
                android:id="@+id/app_site"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:linksClickable="true"
                android:text="@string/app_site"
                android:textColor="#67FF22"
                android:textSize="18.0sp" />
            
            <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/separator"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />
            
            <TextView
                android:id="@+id/app_footer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_footer"
                android:textColor="#ffffff"
                android:textSize="18.0sp" />
            
               <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/separator"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/separator"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/donation_label_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/donation_text"
                android:textColor="#ffffffff"
                android:textSize="18.0sp" />

            <TextView
                android:id="@+id/donation_site_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:linksClickable="true"
                android:text="@string/donation_url"
                android:textColor="#67FF22"
                android:textSize="18.0sp" />

                        
        </LinearLayout>
    </ScrollView>
