<!--  
 /*******************************Copyright Block*********************************
 *                                                                             *
 *                Sally Prayer Times Calculator (Final 24.1.20)                *
 *           Copyright (C) 2015 http://www.sallyprayertimes.com/               *
 *                         bibali1980@gmail.com                                *
 *                                                                             *
 *     This program is free software: you can redistribute it and/or modify    *
 *     it under the terms of the GNU General Public License as published by    *
 *      the Free Software Foundation, either version 3 of the License, or      *
 *                      (at your option) any later version.                    *
 *                                                                             *
 *       This program is distributed in the hope that it will be useful,       *
 *        but WITHOUT ANY WARRANTY; without even the implied warranty of       *
 *        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the        *
 *                 GNU General Public License for more details.                *
 *                                                                             *
 *      You should have received a copy of the GNU General Public License      *
 *      along with this program.  If not, see http://www.gnu.org/licenses      *
 *******************************************************************************/
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widgetMainBackground2"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:baselineAligned="false"
    android:orientation="vertical" >


    <LinearLayout
        android:id="@+id/widget2_background_color"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/blue_background">

        <RelativeLayout
            android:id="@+id/fajrLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fajr_label"
                style="@style/time_label_widget2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fajr_widget"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/fajrTime"
                style="@style/time_value_widget2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/duhrLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/duhr_label"
                style="@style/time_label_widget2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duhr_widget"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/duhrTime"
                style="@style/time_value_widget2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/asrLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:orientation="vertical"  >

            <TextView
                android:id="@+id/asr_label"
                style="@style/time_label_widget2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asr_widget"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/asrTime"
                style="@style/time_value_widget2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/maghribLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/maghrib_label"
                style="@style/time_label_widget2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maghrib_widget"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/maghribTime"
                style="@style/time_value_widget2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ishaaLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ishaa_label"
                style="@style/time_label_widget2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ishaa_widget"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/ishaaTime"
                style="@style/time_value_widget2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>